@@ -1,3 +1,7 @@
+2011-03-12  Marc Glisse  <marc.glisse@inria.fr>
+
+	* gmpxx.h: Rename __GMPXX_TMP_* to __GMPXX_TMPZ_*. Use in more places.
+
 2011-03-12  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tune/powerpc.asm: Use powerpc syntax, not power syntax.
